
syntax = "proto3";

option go_package="./;service";

package service;

message UserRequest{
    int32 id = 1;
    string UserPhone =2;
    string UserName=3;
    string UserSex = 4;
    string UserAddress = 5;
}

message UserResponse{
    int32 id = 1;
    string UserPhone =2;
    string UserName=3;
    string UserSex = 4;
    string UserAddress = 5;
}

message UserListResponse{
    int32 totalCount=1;
    repeated UserResponse userList=2;
}

message UserIdListRequest{
    repeated int32 user_id = 1;
    int32 page=2;
    int32 pageSize=3;
}

message MessageResponse{
    string message=1;
}

service UserService {
     rpc GetUser(UserRequest) returns (UserResponse);
     rpc CreateUser(UserRequest) returns (MessageResponse);
     rpc UpdateUser(UserRequest) returns (MessageResponse);
     rpc DeleteUser(UserRequest) returns (MessageResponse);
     rpc UserList(UserIdListRequest) returns (UserListResponse);
}
